--- a/Prototip/dashboard-tutor.html
+++ b/Prototip/dashboard-tutor.html
@@ -19,6 +19,7 @@
             <li><a href="create-cv.html">Kreiraj CV</a></li>
             <li><a href="edit-cv.html">Uredi svoj CV</a></li>
             <li><a href="search-ads.html">Pretraži oglase</a></li>
+            <li><a href="#">Preuzmi svoj CV</a></li>
         </ul>
     </main>
 </body>
